chp12_ingress/set1224_default_backend/set1224_ingress_default_backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiada
  namespace: chp12-set1224
spec:
  defaultBackend:
    service:
      name: fun404
      port:
        name: http
  rules:
  - host: kiada.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiada
            port:
              name: http
  - host: api.example.com
    http:
      paths:
      - path: /quote
        pathType: Exact
        backend:
          service:
            name: quote
            port:
              name: http
      - path: /questions
        pathType: Prefix
        backend:
          service:
            name: quiz
            port:
              name: http
